# quiz_interview

./: .gitignore  README.md  TODO.md  database_functions.sql  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
labs/: cheatsheet.ipynb  cv_apply_job.ipynb  cv_creation.ipynb  gemini_function_call.ipynb  linkedin.ipynb  linkedin2.ipynb  master_tesis copy.txt  query.ipynb
labs/generate_questions_workera/chains/: chain_expand_topics.ipynb  chain_gemini_generate_questions_multiple_options.ipynb  chain_question_revision.ipynb  chain_question_revision_2.ipynb  chain_question_revision_3.ipynb  chain_question_revision_4_without_llama.ipynb  probability_content.csv  questions.csv
labs/generate_questions_workera/content_requirements/: probability.txt  probability_expanded_1_test.md  probability_extracted.txt  statistics.txt  statistics_extracted.txt
labs/generate_questions_workera/prompts/: expand_topics.txt  extract_content_from_scraped.txt  prompt_expand_topics.ipynb
labs/generate_questions_workera/questions_answers/: workera_datascience.txt  workera_deeplearn.txt  workera_ml.txt
labs/interview/: HR_interview_questions.ipynb  HR_interview_questions_2.ipynb  HR_interview_questions_projects.ipynb  QA_Technical_interview_questions.ipynb  master_tesis.txt
labs/linkedin/: linkedin_blog_comment.ipynb
src/: main.py
