[tool.poetry]
name = "quiz-interview"
version = "0.1.0"
description = ""
authors = ["Rhuan Barros <rhuanbarros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
python-dotenv = "^1.0.1"
supabase = "^2.7.4"
ipykernel = "^6.29.5"
langchain = "^0.3.0"
langchain-google-genai = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true